# demo-site-automation

./: README.md  pyproject.toml  requirements.txt  setup.cfg
autoenv/: pyvenv.cfg
autoenv/Scripts/: activate  activate.bat
dsaenv/: pyvenv.cfg
dsaenv/Scripts/: activate  activate.bat  jsonpointer
notebooks/: Demo-automation.ipynb
src/demo_automation/: automate_browser.py
