[metadata]
name = demo_site_automation
version = 1.0.0
author= J Oshin
description = Automating demo website with python
url = https://github.com/j-oshi/demo-site-automation
classifiers=
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where=src  
include=automation*  
